<resources>
    <string name="app_name">E-Cure</string>
    <string name="button1_signin">Sign in</string>
    <string name="text_view_01">If you are already a member ?.</string>
    <string name="text_view_02">"Enter your email address:</string>
    <string name="text_view_03">Password:</string>

    <string name="button2_signup">Sign Up</string>
    <string name="text_view_04">If you are a new member!</string>
    <string name="text_view_05">Enter your name:</string>
    <string name="text_view_06">Enter your age:</string>
    <string name="text_view07">Gender:</string>

    <string name="BMI_text">Body Mass Index Calculator</string>
    <string name="BMI_paragraph">Body Mass Index is a simple calculation using a person’s height and weight.
        The formula is BMI = kg/m2 where kg is a person’s weight in kilograms and m2 is their height in metres squared.</string>
    <string name="BMI_text_01">Enter the height:</string>
    <string name="BMI_text_02">Enter the weight:</string>
    <string name="Calculate">Calcualte</string>

    <string name="Next">Next</string>
    <string name="Welcome">MENU</string>
    <string name="Button01">BMI</string>
    <string name="Button02">DISEASES PREACUTIONS</string>
    <string name="Button03">LIVE VIDEO SESSION</string>
    <string name="Button04">BACK</string>

    <string name="exit">Thanks for using our app.</string>
    <string name="exit1">Hope to see you soon.</string>
    <string name="speciality">Choose Speciality</string>
    <string name="Someone">someone@gmail/yahoo/outlook.com</string>

    <string name="A1">Already a member?</string>
    <string name="A2">Are you new?</string>

    <string name="t1">Choose Your Symotoms</string>
    <string name="diseases01">INTESTINAL INFECTIONS</string>
    <string name="diseases02">BACTERIAL DISEASES</string>
    <string name="diseases03">VIRAL DISEASES</string>
    <string name="diseases04">DISEASES OF RESPIRATORY SYSTEM</string>
    <string name="diseases05">ACCIDENT,INJURIES AND POSIONING</string>
    <string name="diseases06">AIDS</string>
    <string name="diseases07">OTHER DISEASES</string>
    <string name="diseases08">BACK</string>
</resources>
