<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#DEB887"
    tools:context=".Diseases">

        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t1"
            android:textSize="30dp"
            android:layout_marginTop="80dp"
            android:textStyle="bold"
            android:textColor="#000000">
        </TextView>

    <Button
        android:id="@+id/bb1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"
        android:text="@string/diseases01"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary">
    </Button>

    <Button
        android:id="@+id/bb2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/colorAccent"
        android:text="@string/diseases02"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary">
    </Button>

    <Button
        android:id="@+id/bb3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/colorAccent"
        android:text="@string/diseases03"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary">
    </Button>

    <Button
        android:id="@+id/bb4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/colorAccent"
        android:text="@string/diseases04"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary">
    </Button>

    <Button
        android:id="@+id/bb5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/colorAccent"
        android:text="@string/diseases05"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary">
    </Button>

    <Button
        android:id="@+id/bb6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/colorAccent"
        android:text="@string/diseases06"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary">
    </Button>

    <Button
        android:id="@+id/bb7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/colorAccent"
        android:text="@string/diseases07"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary">
    </Button>

    <Button
        android:id="@+id/bb8"
        android:layout_width="55dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="140dp"
        android:background="@color/colorAccent"
        android:text="@string/diseases08"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary">
    </Button>


</LinearLayout>