<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#DEB887"
    tools:context=".SignUP">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="90dp"
        android:text="Register yourself"
        android:textColor="#000000"
        android:textSize="30dp"
        android:textStyle="bold"></TextView>

    <TextView
        android:id="@+id/text_view05"
        android:text="@string/text_view_05"
        android:textSize="20dp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>

    <EditText
        android:id="@+id/edi_01"
        android:layout_width="370dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:clickable="false"
        android:textColor="#000000">

    </EditText>

    <TextView
        android:id="@+id/text_view06"
        android:text="@string/text_view_06"
        android:textSize="20dp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginLeft="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>


    <EditText
        android:id="@+id/edi_02"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:clickable="false"
        android:textColor="#000000">

    </EditText>


    <TextView
        android:id="@+id/text_view07"
        android:text="@string/text_view_02"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>

    <EditText
        android:id="@+id/edi_03"
        android:hint="@string/Someone"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:textColor="#000000"
        android:textColorHint="#000000">
    </EditText>

    <TextView
        android:id="@+id/text_view08"
        android:text="@string/text_view_03"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginLeft="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>

    <EditText
        android:id="@+id/edi_04"
        android:layout_width="374dp"
        android:layout_height="43dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:hint="******"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#000000">

    </EditText>

    <TextView
        android:id="@+id/gender"
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="0dp"
        android:text="@string/text_view07"
        android:textColor="#000000"
        android:textSize="20dp"
        android:textStyle="bold">

    </TextView>

    <RadioGroup
        android:id="@+id/rdbgroup"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rdb1"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_margin="-70dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:text="Male"
            android:textColor="#FF4500"
            android:textSize="20sp"
            android:textStyle="bold"></RadioButton>


        <RadioButton
            android:id="@+id/rdb2"
            android:layout_width="105dp"
            android:layout_height="33dp"
            android:layout_marginTop="-32dp"
            android:layout_marginLeft="90dp"
            android:text="Female"
            android:textColor="#FF4500"
            android:textSize="20dp"
            android:textStyle="bold">
        </RadioButton>

    </RadioGroup>

    <Button
        android:id="@+id/Next"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/Next"
        android:textColor="#FF4500"
        android:textSize="20dp"
        android:textStyle="bold">

    </Button>

</LinearLayout>