<?xml version="1.0" encoding="utf-8"?>
   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

        android:id="@+id/mainbody"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DEB887"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <ImageView
        android:layout_marginTop="40dp"
        android:layout_marginLeft="-10dp"
        android:layout_width="390dp"
        android:layout_height="170dp"
        android:src="@drawable/welcome">

    </ImageView>


    <TextView
        android:id="@+id/text_view01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_view_01"
        android:textColor="#A52A2A"
        android:fontFamily="sans-serif"
        android:textSize="20sp"
        android:textStyle="bold">


    </TextView>
    <TextView
        android:id="@+id/text_view02"
        android:text="@string/text_view_02"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:fontFamily="sans-serif"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>

 <EditText
     android:id="@+id/email1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="5dp"
     android:layout_marginTop="10dp"
     android:backgroundTint="@color/colorAccent"
     android:fontFamily="sans-serif"
     android:hint="someone@yahoo/gmail/outlook.com"
     android:textColor="#000000"
     android:textColorHint="#000000"></EditText>

    <TextView
        android:id="@+id/text_view03"
        android:text="@string/text_view_03"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:fontFamily="sans-serif"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>

 <EditText
     android:id="@+id/pass1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="5dp"
     android:layout_marginTop="10dp"
     android:backgroundTint="@color/colorAccent"
     android:fontFamily="sans-serif"
     android:hint="*******"
     android:inputType="textPassword"
     android:textColor="#000000"
     android:textColorHint="#000000" />


 <Button
     android:id="@+id/button2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginLeft="130dp"
     android:layout_marginTop="5dp"
     android:background="@color/colorAccent"
     android:text="@string/button1_signin"
     android:textColor="@color/colorPrimary"
     android:textSize="20dp"

     android:textStyle="bold"></Button>
</LinearLayout>