<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="15"
    android:background="@drawable/abs"
    tools:context=".mainmenu">

    <include layout="@layout/app_bar_layout" android:id="@+id/main_page_toolbar" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"></View>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="Welcome! Our Services"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="30dp"
       android:layout_gravity="center"
        android:layout_weight="1.5">
    </TextView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4">
    </View>
    <Button
        android:id="@+id/b_01"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.2"
        android:text="@string/Button01"
        android:background="@color/colorAccent"
        android:textColor="@color/design_default_color_primary"
        android:textSize="20dp"
        android:textStyle="bold">

    </Button>


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4">
    </View>

    <Button
        android:id="@+id/b_02"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.2"
        android:background="@color/colorAccent"
        android:textColor="@color/design_default_color_primary"
        android:text="@string/Button02"
        android:textSize="20dp"
        android:textStyle="bold">


       </Button>


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4">
    </View>
    <Button
        android:id="@+id/b_03"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorAccent"
        android:textColor="@color/design_default_color_primary"
        android:text="@string/Button03"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_weight="1.2" >
    </Button>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4">
    </View>
    <Button
        android:id="@+id/b_04"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorAccent"
        android:textColor="@color/design_default_color_primary"
        android:text="LOGOUT"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_weight="1.2">
    </Button>





</LinearLayout>